--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-    - image: circleci/golang:1.11
-    - image: circleci/postgres:9.6-alpine
+    - image: circleci/golang:latest
+    - image: circleci/postgres:latest
       environment: # environment variables for primary container
         POSTGRES_USER: postgres
-    working_directory: /go/src/github.com/the-gigi/delinkcious
+    working_directory: /go/src/github.com/pingguodeli573365/delinkcious
     steps:
     - checkout
     - run:
