--- a/svc/api_gateway_service/Dockerfile
+++ b/svc/api_gateway_service/Dockerfile
@@ -1,5 +1,5 @@
 FROM g1g1/delinkcious-python-flask-grpc:0.1
-MAINTAINER Gigi Sayfan "the.gigi@gmail.com"
+MAINTAINER Ramon "1955854667@qq.com"
 COPY . /api_gateway_service
 WORKDIR /api_gateway_service
 EXPOSE 5000
