--- a/svc/social_graph_service/Dockerfile
+++ b/svc/social_graph_service/Dockerfile
@@ -1,14 +1,15 @@
-FROM golang:1.11 AS builder
-ADD ./main.go main.go
-ADD ./service service
-# Fetch dependencies
-RUN go get -d -v
+#当前案例中没有使用go mod依赖模式，替换修改
+FROM golang:latest AS builder
+
+COPY ./../* /deliinkcious/
+
+WORKDIR /delinkcious/svc/social_graph_service/
 
 # Build image as a truly static Go binary
 RUN CGO_ENABLED=0 GOOS=linux go build -o /social_graph_service -a -tags netgo -ldflags '-s -w' .
 
 FROM scratch
-MAINTAINER Gigi Sayfan <the.gigi@gmail.com>
+MAINTAINER Ramon  <1955854667@qq.com>
 COPY --from=builder /social_graph_service /app/social_graph_service
 EXPOSE 9090
 ENTRYPOINT ["/app/social_graph_service"]
