--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,20 @@ version: 2
 jobs:
 # 不使用流水线必须使用`build`作为工作入口
   build:
-  # 使用docker运行步骤
-    docker: //使用docker运行步骤
+  # 使用docker
+    docker: 
     - image: circleci/golang:latest
     - image: circleci/postgres:9.6-alpine
-      environment: //设置 postgress容器中的环境变量
+    # 设置postgress 容器中的环境变量
+      environment: 
         POSTGRES_USER: leimeng
-        
-
+        POSTGRES_DB: circle_test      
     working_directory: /go/src/github.com/pingguodeli573365/delinkcious
     steps:
     - checkout
     - run:
         name: Get all dependencies
         command: |
-         go env -w GOPROXY=https://goproxy.cn
          go mod tidy
     - setup_remote_docker:
     - run:
