--- a/svc/user_service/Dockerfile
+++ b/svc/user_service/Dockerfile
@@ -6,7 +6,7 @@ ADD ./main.go main.go
 ADD ./service service
 ADD ./go.mod go.mod
 # Fetch dependencies
-ENV GOPROXY https://goproxy.cn
+# ENV GOPROXY https://goproxy.cn
 ENV GO111MODULE on
 RUN go mod tidy
 
