--- a/svc/social_graph_service/Dockerfile
+++ b/svc/social_graph_service/Dockerfile
@@ -14,7 +14,7 @@ RUN go mod tidy
 # Build image as a truly static Go binary
 RUN CGO_ENABLED=0 GOOS=linux go build -o /social_graph_service -a -tags netgo -ldflags '-s -w' .
 
-FROM alpine
+FROM alpine:latest
 COPY --from=builder /social_graph_service /app/social_graph_service
 EXPOSE 9090
 ENTRYPOINT ["/app/social_graph_service"]
