--- a/svc/link_service/k8s/secrets.yaml
+++ b/svc/link_service/k8s/secrets.yaml
@@ -3,6 +3,6 @@ kind: Secret
 type: Opaque
 metadata:
   name: link-mutual-auth
-  namespace: default
+  namespace: delinkcious
 data:
   mutual-auth.yaml: c29jaWFsLWdyYXBoLW1hbmFnZXI6IDEyMw==
