--- a/svc/link_service/k8s/link_manager.yaml
+++ b/svc/link_service/k8s/link_manager.yaml
@@ -26,7 +26,7 @@ spec:
       serviceAccount: link-manager
       containers:
       - name: link-manager
-        image: g1g1/delinkcious-link:0.6
+        image: 1955854667/delinkcious-link:0.6
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
