--- a/svc/api_gateway_service/Dockerfile
+++ b/svc/api_gateway_service/Dockerfile
@@ -1,6 +1,6 @@
 FROM g1g1/delinkcious-python-flask-grpc:0.1
 MAINTAINER Ramon "1955854667@qq.com"
-COPY . /api_gateway_service
+COPY . / 
 WORKDIR /api_gateway_service
 EXPOSE 5000
 ENTRYPOINT FLASK_DEBUG=1 python run.py
